<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/navigation_analytics"
        android:icon="@drawable/analytics"
        android:title="@string/title_analytics" />

    <item
        android:id="@+id/navigation_budgets"
        android:icon="@drawable/budgets"
        android:title="@string/title_budgets" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_records"
        android:icon="@drawable/records"
        android:title="@string/title_records"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/account"
        android:title="@string/title_account"/>

</menu>