<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">



    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.expensetracker.ui.dashboard.DashboardFragment"
        android:label="@string/title_analytics"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.expensetracker.ui.notifications.NotificationsFragment"
        android:label="@string/title_budgets"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.expensetracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.expensetracker.ui.notifications.NotificationsFragment"
        android:label="@string/title_records"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.expensetracker.ui.notifications.NotificationsFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_notifications" />
</navigation>