<!-- item_analytics.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/textName"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textAllocated"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/allocated"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textUsed"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/used"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textAvailable"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/available"
        android:textSize="18sp" />

</LinearLayout>
